--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@
   margin: 0px;
   box-sizing: border-box;
 }
+
+.loader {
+  border: 12px solid rgb(231, 0, 0);
+  border-left-color: #3498db;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
